--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,7 +15,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
       - name: Generate snake animation
         uses: Platane/snk/svg-only@v3
         with:
