--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,6 +19,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+      - name: Install canvas dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcairo2-dev libjpeg-dev libpango1.0-dev libgif-dev build-essential g++
       - name: Generate snake animation
         uses: Platane/snk/svg-only@v3
         with:
